Fix deployment label overlap

--- a/ui/apps/platform/src/css/trumps.css
+++ b/ui/apps/platform/src/css/trumps.css
@@ -100,6 +100,12 @@ button.pf-c-tree-view__node {
 
 /* For classic components to equal or exceed z-index of PatternFly elements. */
 
+/* override PatternFly DescriptionList horizontal variant to allow long keys and values to wrap */
+.pf-c-description-list__term,
+.pf-c-description-list__description{
+    word-break: break-all;
+}
+
 .z-xs-100 {
     z-index: 100; /* --pf-global--ZIndex--xs */
 }
